# AstraTickets

./: .gitignore  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: __init__.py  cli.py  main.py
backend/app/ai/: __init__.py  generation.py  grounded_answers.py
backend/app/api/: ai.py  auth.py  dependencies.py  knowledge.py  ticket_replies.py  tickets.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  ticket.py  ticket_reply.py  user.py
backend/app/rag/: __init__.py  chunking.py  embeddings.py  store.py
backend/app/schemas/: __init__.py  ai.py  auth.py  knowledge.py  ticket.py  ticket_reply.py
backend/app/services/: __init__.py  users.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_create_users.py  0002_create_tickets.py  0003_create_ticket_replies.py
backend/tests/: __init__.py  api_helpers.py  conftest.py  test_ai_drafts.py  test_auth.py  test_database.py  test_health.py  test_knowledge.py  test_migrations.py  test_ticket_model.py  test_ticket_replies_api.py  test_tickets_api.py  test_users.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/auth/: AuthContext.tsx  ProtectedRoute.tsx
frontend/src/components/: AuthShell.tsx  DashboardPlaceholder.tsx
frontend/src/pages/: CustomerDashboardPage.tsx  CustomerTicketPage.tsx  LoginPage.tsx  RegisterPage.tsx  StaffDashboardPage.tsx  StaffTicketPage.tsx
