[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "astratickets-api"
version = "0.1.0"
description = "FastAPI backend for AstraTickets"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116,<0.139",
    "starlette>=0.46,<1.0",
    "uvicorn[standard]>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.4,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
