[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "astratickets-api"
version = "0.1.0"
description = "FastAPI backend for AstraTickets"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16,<2.0",
    "chromadb>=1.5,<2.0",
    "email-validator>=2.2,<3.0",
    "fastapi>=0.116,<0.139",
    "pwdlib[argon2]>=0.3,<1.0",
    "pyjwt>=2.10,<3.0",
    "pydantic-settings>=2.10,<3.0",
    "python-multipart>=0.0.20,<1.0",
    "sentence-transformers>=5.6,<6.0",
    "sqlalchemy>=2.0,<3.0",
    "starlette>=0.46,<1.0",
    "uvicorn[standard]>=0.35,<1.0",
]

[project.scripts]
astratickets = "app.cli:main"

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.4,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
